--- a/index.html
+++ b/index.html
@@ -1573,20 +1573,17 @@ $('.filters input').simpleCheckbox({
 
             $(".topo-hours-atendimento.pull-left").css({"display":"none"});
 
-            $(".tp-caption.big_theme").css({"background-color":"white",
-                                            "color": "#8da200"});
+            $(".tp-caption.big_theme").css({"background-color":"white","color": "#8da200"});
 
-            $(".tp-caption.small_theme").css({"background-color":"white",
-                                              "color": "#464646"});
+            $(".tp-caption.small_theme").css({"background-color":"white", "color": "#464646"});
 
-            $(".caption.lfl.btn.btn-primary.btn_theme.tp-caption.start").css({"font-size":"42px",
-                                                                              "color": "#464646"});
+            $(".caption.lfl.btn.btn-primary.btn_theme.tp-caption.start").css({"font-size":"42px","color": "#464646"});
 
-            $(".btn.btn-primary").css({"width":"140px",
-                                       "height": "60px"});
+            $(".btn.btn-primary").css({"width":"140px","height": "60px"});
 
+			$(".dicas-circle-price").css({"left":"-130px","top":"90px","box-shadow": "6px 10px 4px #111111aa"});
 
-
+			$(".bg-1").css({"background":"white"});
         });
     </script>
 
